# CMakeList.txt : CMake project for DemoSerializeFunctions, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (DemoSerializeFunctions "main.cpp" "serializeFunctions.h" "serializeFunctions.cpp")

# TODO: Add tests and install targets if needed.
